--- a/glib/Makefile
+++ b/glib/Makefile
@@ -2,8 +2,7 @@
 # Small makefile for testing with non-Microsoft compilers
 #
 
-CXX = g++
-CXXFLAGS += -std=c++98
+CXXFLAGS += -Wall
 LDFLAGS += -lrt
 
 MAINOBJS = base.o testBase.o
@@ -11,10 +10,10 @@ MAINOBJS = base.o testBase.o
 all: testBase
 
 testBase: $(MAINOBJS)
-	$(CXX) -o testBase $(MAINOBJS) $(LDFLAGS)
+	g++ -o testBase $(MAINOBJS) $(LDFLAGS)
 
 %.o: %.cpp
-	$(CXX) -c $(CXXFLAGS) $<
+	g++ -c $(CXXFLAGS) $<
 	
 clean:
 	rm -f *.o *.gch testBase testBase.exe
