add SynQueue and Pool

--- a/test/Makefile
+++ b/test/Makefile
@@ -5,6 +5,7 @@
 ## Linux  (uncomment the 2 lines below for compilation on Linux)
 CXXFLAGS += -Wall -std=c++11
 LDFLAGS += -lrt -pthread -std=c++11
+OBJ = Snap.o ThreadPool.o
 
 ## Main application file
 MAIN = test
@@ -16,10 +17,13 @@ all: $(MAIN)
 #opt: $(MAIN)
 
 # COMPILE
-$(MAIN): $(MAIN).cpp Snap.o
-	g++ -o $(MAIN) $(MAIN).cpp Snap.o $(LDFLAGS)
+$(MAIN): $(MAIN).cpp $(OBJ)
+	g++ -o $(MAIN) $(MAIN).cpp $(OBJ) $(LDFLAGS)
 
-Snap.o: 
+ThreadPool.o: ThreadPool.cpp ThreadPool.h
+	g++ -c $(CXXFLAGS) $<
+
+Snap.o:
 	g++ -c $(CXXFLAGS) ../snap/Snap.cpp -I../glib -I../snap
 
 clean:
