--- a/graphstat/Makefile
+++ b/graphstat/Makefile
@@ -3,12 +3,12 @@
 #
 
 ## Linux  (uncomment the 2 lines below for compilation on Linux)
-CXXFLAGS += -Wall
-LDFLAGS += -lrt
+CXXFLAGS += -Wall -std=c++11
+LDFLAGS += -lrt -pthread -std=c++11
 
 ## CygWin (uncomment the 2 lines below for compilation on CygWin)
 #CXXFLAGS += -Wall
-#LDFLAGS += 
+#LDFLAGS +=
 
 SNAPDIR = ..
 LIB = -I $(SNAPDIR)/glib -I $(SNAPDIR)/snap
@@ -23,13 +23,12 @@ opt: LDFLAGS += -O4
 opt: $(MAIN)
 
 # COMPILE
-$(MAIN): $(MAIN).cpp  $(MAIN).h Snap.o 
+$(MAIN): $(MAIN).cpp  $(MAIN).h Snap.o
 	g++ -o $(MAIN) $(MAIN).cpp Snap.o $(LDFLAGS)
-	
-Snap.o: 
+
+Snap.o:
 	g++ -c $(CXXFLAGS) $(LIB) $(SNAPDIR)/snap/Snap.cpp
 
 clean:
 	rm -f *.o $(MAIN) $(MAIN).exe $(MAIN).Err
 	rm -rf Debug Release
-
