--- a/graphstat/src/CMakeLists.txt
+++ b/graphstat/src/CMakeLists.txt
@@ -1,5 +1,2 @@
-# -*- mode: cmake;-*-
-
-
 add_executable(graphstat graphstat.cpp)
-target_link_libraries(graphstat ${BASE_LIBS})
+target_link_libraries(graphstat ${LIBRARIES})
