--- a/graphstat/CMakeLists.txt
+++ b/graphstat/CMakeLists.txt
@@ -25,6 +25,8 @@ set(CMAKE_BINARY_DIR ${CMAKE_BUILD_DIR})
 set(LIBRARY_OUTPUT_PATH ${CMAKE_BUILD_DIR})
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BUILD_DIR})
 
+set(CMAKE_BUILD_TYPE Release)
+
 # cmake package search directories
 #set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} $ENV{GIT_REPO})
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "/home/jzzhao/git_project")
